[tool.poetry]
name = "vanbug"
version = "0.1.0"
description = ""
authors = ["creisle <caralynreisle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.3.0"
mkdocs-awesome-pages-plugin = "^2.7.0"
mkdocs-material = "^8.3.3"
mkdocs-include-markdown-plugin = "^3.5.2"
mkdocs-video = "^1.3.0"
mkdocs-redirects = "^1.0.4"
pymdown-extensions = "^10.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
